--- a/Example/pom.xml
+++ b/Example/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		 <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
 		<!-- Apache Commons IO -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
